<resources>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="confirm_ok">OK</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="action_save">Save</string>
    <string name="action_save_to">Save To</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_copy_to">Copy to</string>
    <string name="action_move">Move</string>
    <string name="action_move_to">Move to</string>
    <string name="action_cut">Cut</string>
    <string name="action_paste">Paste</string>
    <string name="action_paste_all">Paste All</string>
    <string name="action_rename">Rename</string>
    <string name="action_play">Play</string>
    <string name="action_play_to">Play To</string>
    <string name="action_stop">Stop</string>
    <string name="action_download">Download</string>
    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="action_send">Send</string>
    <string name="action_exit">Exit</string>
    <string name="action_view">View</string>
    <string name="action_default">Default</string>
    <string name="action_back">Back</string>
    <string name="action_hide">Hide</string>
    <string name="action_open">Open</string>
    <string name="action_openas">Open As</string>
    <string name="action_select">Select</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_none">Select None</string>
    <string name="action_edit">Edit</string>
    <string name="action_close">Close</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_compress">Compress</string>
    <string name="action_receive">Receive</string>
    <string name="action_connect">Connect</string>
    <string name="action_show_password">Show password</string>
    <string name="action_open_location">Open Location</string>
    <string name="action_apply_to_all">Apply to all</string>
    <string name="action_set_name">Name</string>
    <string name="action_share">Share</string>
    <string name="action_share_via">Share Via</string>
    <string name="action_start">Start</string>
    <string name="action_sort">Sort</string>
    <string name="action_create">Create</string>
    <string name="action_extract">Extract</string>
    <string name="action_extract_to">Extract to</string>
    <string name="action_pause">Pause</string>
    <string name="message_error">Error</string>
    <string name="message_retry">Retry</string>
    <string name="message_alert">Alert</string>
    <string name="message_invalid_path">Invalid path</string>
    <string name="message_confirm">Confirm</string>
    <string name="message_overwrite">Overwrite</string>
    <string name="message_login_fail">Login fails</string>
    <string name="message_exit">Press again to exit</string>
    <string name="message_hint">Hint</string>
    <string name="capital_on">ON</string>
    <string name="capital_off">OFF</string>
    <string name="location_phone">Phone</string>
    <string name="location_home">Home</string>
    <string name="location_sdcard">Sdcard</string>
    <string name="location_lan">LAN</string>
    <string name="location_ftp">FTP</string>
    <string name="location_cloud">Cloud</string>
    <string name="location_device">Bluetooth</string>
    <string name="location_local">Local</string>
    <string name="location_history">History</string>
    <string name="location_hidelist">Hide List</string>
    <string name="location_clipboard">Clipboard</string>
    <string name="location_fast_access">Fast Access</string>
    <string name="location_server">Server</string>
    <string name="location_help">Help</string>
    <string name="category_picture">Pictures</string>
    <string name="category_music">Music</string>
    <string name="category_apk">APK</string>
    <string name="category_book">Books</string>
    <string name="category_movie">Movies</string>
    <string name="category_file">File</string>
    <string name="category_folder">Folder</string>
    <string name="preference_backup_settings_text">Backup settings</string>
    <string name="preference_setting_restore_summary">Restore settings</string>
    <string name="preference_upgrade_settings_text">Update settings</string>
    <string name="preference_upgrade_auto_check_summary">Check new version according to the schedule</string>
    <string name="preference_upgrade_auto_check_title">Auto check</string>
    <string name="preference_upgrade_manual_check_summary">Check new version manually</string>
    <string name="preference_upgrade_manual_check_title">Check now</string>
    <string name="preference_auto_install_summary">install/uninstall programs automatically</string>
    <string name="preference_auto_install_text">(un)install apk automatically</string>
    <string name="preference_bt_dir">Bluetooth share path</string>
    <string name="preference_root_dir">Home directory</string>
    <string name="preference_app_backup_dir">App backup directory</string>
    <string name="preference_hidden_file_title">Show hidden files</string>
    <string name="preference_hidden_file_summary">"Show files whose name start with a '.'"</string>
    <string name="preference_cache_title">Clear cache</string>
    <string name="preference_cache_summary">Click to clear cached data (thumbnails etc.)</string>
    <string name="preference_file_text">FILE SETTINGS</string>
    <string name="preference_show_scroll_thumb">Show scroll thumb</string>
    <string name="preference_show_scroll_thumb_summary">Show scroll thumb while long scrolling</string>
    <string name="about_more">More apps</string>
    <string name="clear_cache_on_exit">Clear Cache on Exit</string>
    <string name="preference_clean_history_exit">Clean history on exit</string>
    <string name="preference_clean_prefer_summary">Clear the default app settings</string>
    <string name="preference_clean_prefer_title">Clear defaults</string>
    <string name="preference_language_setting_title">Language settings</string>
    <string name="preference_language_setting_summary">Select your language</string>
    <string name="preference_auto_backup_text">Backup before uninstall</string>
    <string name="preference_net_passwd_title">Turn on network protection</string>
    <string name="preference_net_passwd_summary">Turn on password to protect your network resources</string>
    <string name="preference_net_passwd_change_title">Change password</string>
    <string name="preference_net_passwd_change_summary">Change the password</string>
    <string name="preference_backup_app_cache_summary">Backup app data when backup app</string>
    <string name="preference_backup_app_cache_text">Backup data</string>
    <string name="preference_security">SECURITY SETTINGS</string>
    <string name="preference_update">SYSTEM SETTINGS</string>
    <string name="preference_update_summary">Update to current version</string>
    <string name="preference_start_protect_summary">Need password to access ES File Explorer</string>
    <string name="preference_start_protect_title">Start protect</string>
    <string name="preference_security_setting_text">Password settings</string>
    <string name="preference_protect_hided_dirfies_title">Hide list protection</string>
    <string name="preference_protect_hided_dirfies_summary">Turn on password to protect your hide list resources</string>
    <string name="preference_display_setting_text">Display settings</string>
    <string name="preference_cleanup_setting_text">Cleanup settings</string>
    <string name="preference_directory_setting_text">Directory settings</string>
    <string name="open_default_window">Set the default windows</string>
    <string name="preference_download_dir">Download path</string>
    <string name="preference_root_enhancement">ROOT ENHANCEMENT</string>
    <string name="close_notification">Close notification</string>
    <string name="close_notification_summary">Close notification when the task is finished</string>
    <string name="preference_tools">TOOLS SETTINGS</string>
    <string name="preference_tools_app">App Manager</string>
    <string name="preference_window_settings">Window settings</string>
    <string name="preference_default_window_summary">The default windows will be opened on each start</string>
    <string name="app_download_manager">Download Manager</string>
    <string name="preference_show_select">Show the Select button</string>
    <string name="preference_show_select_summary">Show the Select button on the tool bar</string>
    <string name="browser_downloader_disabled">Disable ES Downloader</string>
    <string name="preference_show_disk_usage">Show sd card size</string>
    <string name="preference_show_disk_usage_summary">Show sdcard size in History</string>
    <string name="preference_toolbar_setting_show_name_title">Show the name on the toolbar</string>
    <string name="preference_toolbar_setting_show_name_summary">Show the name on the toolbar</string>
    <string name="preference_show_windows">Show the Windows button</string>
    <string name="preference_show_windows_summary">Show the Windows button on the tool bar</string>
    <string name="privacy_statement">Privacy Policy</string>
    <string name="preference_show_disk_remain">Show space low warning</string>
    <string name="preference_show_disk_remain_summary">Show warning message if space is low after application installed</string>
    <string name="rate">Rate for support</string>
    <string name="official_website">Official website</string>
    <string name="special_thanks_to_translators">Special thanks to translators</string>
    <string name="about_feedback">Feedback</string>
    <string name="send_email_to_us">Send email to us</string>
    <string name="preference_enable_remote_synchronizer_title">Enable remote synchronize</string>
    <string name="preference_enable_remote_synchronizer_summary">Upload remote file automatically when it is edited locally by 3rd party app</string>
    <string name="recycle_title">Recycle Bin</string>
    <string name="preference_open_recycle_title">Enable Recycle Bin Function</string>
    <string name="preference_open_recycle_summary">Put deleted file into Recycle bin so that they can be restored</string>
    <string name="pcs_login_password_hint">Please input password</string>
    <string name="pcs_register_number_hint">Please input your mobile phone number</string>
    <string name="pcs_register_message">SMS one key register</string>
    <string name="preference_show_pcs_drive_title">Show netdisk</string>
    <string name="preference_show_pcs_drive_summary">Show netdisk in Home</string>
    <string name="login_if_registered">I have an account, click Login</string>
    <string name="app_update">App update</string>
    <string name="app_update_setttings_title">Choose auto detect update apps</string>
    <string name="app_update_setttings_title_summary">Only in WiFi</string>
    <string name="copyright">© 2013, ES APP Group</string>
</resources>